project(leetcode)

cmake_minimum_required(VERSION 3.8)

set(CMAKE_CXX_STANDARD             20)
set(CMAKE_MODULE_PATH              "${CMAKE_SOURCE_DIR}/tools/cmake")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_EXPORT_COMPILE_COMMANDS  ON)

find_package(Catch REQUIRED)

include(tools/cmake/TestSolution.cmake)
include(tools/cmake/BuildFlags.cmake)
include_directories(tools/util)

function(add_task name)
  if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/solutions/${name})
    add_subdirectory(solutions/${name})
  endif()
endfunction()

add_task(01-matrix)
add_task(3sum)
add_task(3sum-closest)
add_task(add-binary)
add_task(add-strings)
add_task(add-to-array-form-of-integer)
add_task(add-two-numbers)
add_task(add-two-numbers-ii)
add_task(all-paths-from-source-to-target)
add_task(arithmetic-slices)
add_task(arithmetic-subarrays)
add_task(arranging-coins)
add_task(as-far-from-land-as-possible)
add_task(asteroid-collision)
add_task(average-salary-excluding-the-minimum-and-maximum-salary)
add_task(backspace-string-compare)
add_task(balanced-binary-tree)
add_task(basic-calculator-ii)
add_task(best-sightseeing-pair)
add_task(best-time-to-buy-and-sell-stock)
add_task(best-time-to-buy-and-sell-stock-ii)
add_task(best-time-to-buy-and-sell-stock-with-cooldown)
add_task(best-time-to-buy-and-sell-stock-with-transaction-fee)
add_task(binary-search)
add_task(binary-search-tree-iterator)
add_task(binary-tree-inorder-traversal)
add_task(binary-tree-level-order-traversal)
add_task(binary-tree-postorder-traversal)
add_task(binary-tree-preorder-traversal)
add_task(binary-tree-right-side-view)
add_task(binary-tree-zigzag-level-order-traversal)
add_task(bitwise-and-of-numbers-range)
add_task(bulls-and-cows)
add_task(bus-routes)
add_task(can-make-arithmetic-progression-from-sequence)
add_task(can-place-flowers)
add_task(capacity-to-ship-packages-within-d-days)
add_task(check-completeness-of-a-binary-tree)
add_task(check-if-it-is-a-straight-line)
add_task(check-if-n-and-its-double-exist)
add_task(check-if-one-string-swap-can-make-strings-equal)
add_task(climbing-stairs)
add_task(coin-change)
add_task(coin-change-ii)
add_task(combination-sum)
add_task(combination-sum-ii)
add_task(combination-sum-iv)
add_task(combinations)
add_task(construct-binary-tree-from-inorder-and-postorder-traversal)
add_task(construct-binary-tree-from-preorder-and-inorder-traversal)
add_task(construct-quad-tree)
add_task(container-with-most-water)
add_task(contains-duplicate)
add_task(convert-binary-number-in-a-linked-list-to-integer)
add_task(convert-sorted-array-to-binary-search-tree)
add_task(convert-sorted-list-to-binary-search-tree)
add_task(copy-list-with-random-pointer)
add_task(count-complete-tree-nodes)
add_task(count-negative-numbers-in-a-sorted-matrix)
add_task(count-odd-numbers-in-an-interval-range)
add_task(count-sub-islands)
add_task(count-subarrays-with-fixed-bounds)
add_task(count-unreachable-pairs-of-nodes-in-an-undirected-graph)
add_task(course-schedule-ii)
add_task(daily-temperatures)
add_task(decode-string)
add_task(decode-ways)
add_task(decrypt-string-from-alphabet-to-integer-mapping)
add_task(delete-and-earn)
add_task(delete-operation-for-two-strings)
add_task(design-add-and-search-words-data-structure)
add_task(design-authentication-manager)
add_task(design-browser-history)
add_task(design-circular-queue)
add_task(design-hashmap)
add_task(design-linked-list)
add_task(design-parking-system)
add_task(determine-whether-matrix-can-be-obtained-by-rotation)
add_task(diameter-of-binary-tree)
add_task(edit-distance)
add_task(evaluate-reverse-polish-notation)
add_task(fibonacci-number)
add_task(find-all-anagrams-in-a-string)
add_task(find-all-lonely-numbers-in-the-array)
add_task(find-duplicate-subtrees)
add_task(find-eventual-safe-states)
add_task(find-first-and-last-position-of-element-in-sorted-array)
add_task(find-k-closest-elements)
add_task(find-minimum-in-rotated-sorted-array)
add_task(find-nearest-point-that-has-the-same-x-or-y-coordinate)
add_task(find-peak-element)
add_task(find-pivot-index)
add_task(find-smallest-letter-greater-than-target)
add_task(find-the-difference)
add_task(find-the-distance-value-between-two-arrays)
add_task(find-the-divisibility-array-of-a-string)
add_task(find-the-duplicate-number)
add_task(find-the-index-of-the-first-occurrence-in-a-string)
add_task(find-the-maximum-number-of-marked-indices)
add_task(find-the-smallest-divisor-given-a-threshold)
add_task(find-the-student-that-will-replace-the-chalk)
add_task(find-the-town-judge)
add_task(find-the-winner-of-the-circular-game)
add_task(first-bad-version)
add_task(first-missing-positive)
add_task(first-unique-character-in-a-string)
add_task(flatten-nested-list-iterator)
add_task(flood-fill)
add_task(generate-parentheses)
add_task(goal-parser-interpretation)
add_task(group-anagrams)
add_task(guess-number-higher-or-lower)
add_task(h-index)
add_task(h-index-ii)
add_task(happy-number)
add_task(house-robber)
add_task(house-robber-ii)
add_task(implement-queue-using-stacks)
add_task(implement-trie)
add_task(increasing-triplet-subsequence)
add_task(insert-delete-getrandom)
add_task(insert-interval)
add_task(insert-into-a-binary-search-tree)
add_task(integer-break)
add_task(intersection-of-two-arrays-ii)
add_task(intersection-of-two-linked-lists)
add_task(interval-list-intersections)
add_task(invert-binary-tree)
add_task(ipo)
add_task(is-graph-bipartite)
add_task(is-subsequence)
add_task(isomorphic-strings)
add_task(jump-game)
add_task(jump-game-ii)
add_task(jump-game-iii)
add_task(jump-game-iv)
add_task(k-closest-points-to-origin)
add_task(keys-and-rooms)
add_task(koko-eating-bananas)
add_task(kth-missing-positive-number)
add_task(kth-smallest-element-in-a-bst)
add_task(largest-perimeter-triangle)
add_task(last-stone-weight)
add_task(left-and-right-sum-differences)
add_task(lemonade-change)
add_task(length-of-last-word)
add_task(letter-case-permutation)
add_task(letter-combinations-of-a-phone-number)
add_task(linked-list-cycle)
add_task(linked-list-cycle-ii)
add_task(linked-list-in-binary-tree)
add_task(linked-list-random-node)
add_task(longest-common-prefix)
add_task(longest-common-subsequence)
add_task(longest-increasing-subsequence)
add_task(longest-palindrome)
add_task(longest-palindrome-by-concatenating-two-letter-words)
add_task(longest-palindromic-subsequence)
add_task(longest-palindromic-substring)
add_task(longest-repeating-character-replacement)
add_task(longest-substring-without-repeating-characters)
add_task(lowest-common-ancestor-of-a-binary-search-tree)
add_task(lowest-common-ancestor-of-a-binary-tree)
add_task(magnetic-force-between-two-balls)
add_task(majority-element)
add_task(matrix-block-sum)
add_task(matrix-diagonal-sum)
add_task(max-area-of-island)
add_task(max-points-on-a-line)
add_task(maximal-network-rank)
add_task(maximal-square)
add_task(maximum-depth-of-binary-tree)
add_task(maximum-distance-between-a-pair-of-values)
add_task(maximum-length-of-subarray-with-positive-product)
add_task(maximum-number-of-removable-characters)
add_task(maximum-product-subarray)
add_task(maximum-subarray)
add_task(maximum-sum-circular-subarray)
add_task(merge-intervals)
add_task(merge-k-sorted-lists)
add_task(merge-sorted-array)
add_task(merge-strings-alternately)
add_task(merge-two-binary-trees)
add_task(merge-two-sorted-lists)
add_task(middle-of-the-linked-list)
add_task(min-cost-climbing-stairs)
add_task(min-stack)
add_task(minimize-deviation-in-array)
add_task(minimum-absolute-difference-in-bst)
add_task(minimum-absolute-sum-difference)
add_task(minimum-distance-between-bst-nodes)
add_task(minimum-falling-path-sum)
add_task(minimum-genetic-mutation)
add_task(minimum-jumps-to-reach-home)
add_task(minimum-limit-of-balls-in-a-bag)
add_task(minimum-number-of-days-to-make-m-bouquets)
add_task(minimum-number-of-vertices-to-reach-all-nodes)
add_task(minimum-path-sum)
add_task(minimum-remove-to-make-valid-parentheses)
add_task(minimum-score-of-a-path-between-two-cities)
add_task(minimum-size-subarray-sum)
add_task(minimum-speed-to-arrive-on-time)
add_task(minimum-time-to-complete-trips)
add_task(minimum-time-to-visit-a-cell-in-a-grid)
add_task(minimum-window-substring)
add_task(missing-number)
add_task(monotonic-array)
add_task(most-stones-removed-with-same-row-or-column)
add_task(move-zeroes)
add_task(multiply-strings)
add_task(my-calendar-i)
add_task(n-ary-tree-level-order-traversal)
add_task(n-ary-tree-preorder-traversal)
add_task(n-queens)
add_task(n-queens-ii)
add_task(n-th-tribonacci-number)
add_task(nearest-exit-from-entrance-in-maze)
add_task(next-greater-element-i)
add_task(next-greater-element-ii)
add_task(next-greater-element-iii)
add_task(non-overlapping-intervals)
add_task(number-of-1-bits)
add_task(number-of-closed-islands)
add_task(number-of-digit-one)
add_task(number-of-enclaves)
add_task(number-of-islands)
add_task(number-of-longest-increasing-subsequence)
add_task(number-of-operations-to-make-network-connected)
add_task(number-of-provinces)
add_task(number-of-zero-filled-subarrays)
add_task(odd-even-linked-list)
add_task(open-the-lock)
add_task(pacific-atlantic-water-flow)
add_task(palindrome-linked-list)
add_task(palindrome-number)
add_task(partition-equal-subset-sum)
add_task(partition-labels)
add_task(pascals-triangle)
add_task(pascals-triangle-ii)
add_task(path-sum)
add_task(path-sum-ii)
add_task(path-sum-iii)
add_task(peak-index-in-a-mountain-array)
add_task(perfect-squares)
add_task(permutation-in-string)
add_task(permutation-sequence)
add_task(permutations)
add_task(permutations-ii)
add_task(plus-one)
add_task(populating-next-right-pointers-in-each-node)
add_task(populating-next-right-pointers-in-each-node-ii)
add_task(possible-bipartition)
add_task(power-of-two)
add_task(product-of-array-except-self)
add_task(range-sum-query-2d-immutable)
add_task(range-sum-query-immutable)
add_task(ransom-note)
add_task(remove-duplicate-letters)
add_task(remove-duplicates-from-sorted-list)
add_task(remove-duplicates-from-sorted-list-ii)
add_task(remove-linked-list-elements)
add_task(remove-nth-node-from-end-of-list)
add_task(reorder-list)
add_task(reorder-routes-to-make-all-paths-lead-to-the-city-zero)
add_task(repeated-dna-sequences)
add_task(repeated-substring-pattern)
add_task(reshape-the-matrix)
add_task(reverse-bits)
add_task(reverse-linked-list)
add_task(reverse-linked-list-ii)
add_task(reverse-nodes-in-k-group)
add_task(reverse-string)
add_task(reverse-words-in-a-string-iii)
add_task(richest-customer-wealth)
add_task(rotate-array)
add_task(rotate-image)
add_task(rotate-list)
add_task(rotting-oranges)
add_task(running-sum-of-1d-array)
add_task(same-tree)
add_task(search-a-2d-matrix)
add_task(search-a-2d-matrix-ii)
add_task(search-in-a-binary-search-tree)
add_task(search-in-rotated-sorted-array)
add_task(search-insert-position)
add_task(seat-reservation-manager)
add_task(serialize-and-deserialize-binary-tree)
add_task(shortest-bridge)
add_task(shortest-path-in-binary-matrix)
add_task(shortest-path-visiting-all-nodes)
add_task(shortest-path-with-alternating-colors)
add_task(shuffle-an-array)
add_task(sign-of-the-product-of-an-array)
add_task(single-element-in-a-sorted-array)
add_task(single-number-i)
add_task(single-number-ii)
add_task(single-number-iii)
add_task(smallest-range-i)
add_task(smallest-range-ii)
add_task(smallest-subsequence)
add_task(sort-an-array)
add_task(sort-characters-by-frequency)
add_task(sort-colors)
add_task(sort-integers-by-the-number-of-1-bits)
add_task(sort-list)
add_task(special-array-with-x-elements-greater-than-or-equal-x)
add_task(spiral-matrix)
add_task(spiral-matrix-ii)
add_task(sqrt)
add_task(squares-of-a-sorted-array)
add_task(string-compression)
add_task(subarray-product-less-than-k)
add_task(subarray-sum-equals-k)
add_task(subsets)
add_task(subsets-ii)
add_task(subtract-the-product-and-sum-of-digits-of-an-integer)
add_task(subtree-of-another-tree)
add_task(sum-of-all-odd-length-subarrays)
add_task(sum-of-left-leaves)
add_task(sum-of-square-numbers)
add_task(sum-root-to-leaf-numbers)
add_task(surrounded-regions)
add_task(swap-nodes-in-pairs)
add_task(symmetric-tree)
add_task(task-scheduler)
add_task(the-k-weakest-rows-in-a-matrix)
add_task(time-needed-to-inform-all-employees)
add_task(to-lower-case)
add_task(top-k-frequent-elements)
add_task(top-k-frequent-words)
add_task(trapping-rain-water)
add_task(triangle)
add_task(two-sum)
add_task(two-sum-ii)
add_task(two-sum-iv-input-is-a-bst)
add_task(ugly-number)
add_task(ugly-number-ii)
add_task(unique-binary-search-trees)
add_task(unique-paths)
add_task(unique-paths-ii)
add_task(valid-anagram)
add_task(valid-parentheses)
add_task(valid-perfect-square)
add_task(valid-sudoku)
add_task(valid-triangle-number)
add_task(validate-binary-search-tree)
add_task(verifying-an-alien-dictionary)
add_task(water-and-jug-problem)
add_task(where-will-the-ball-fall)
add_task(wiggle-subsequence)
add_task(word-break)
add_task(word-ladder)
add_task(word-ladder-ii)
add_task(word-pattern)
add_task(word-search)
